2007-05-28  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/setup/*: Add a copyright notice and GPL boilerplate
	to all shell scripts.

2007-05-28  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #391319.

	* AUTHORS: Add Kees Cook.

	* bin/schroot/setup/15killprocs: New file.  Kill processes in the
	chroot before unmounting any filesystems.  Many thanks to Kees
	Cook for implementing this.

	* bin/schroot/setup/Makefile.am
	(setup_SCRIPTS): Add 15killprocs

2007-05-22  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/setup/10mount
	(do_umount_all): Cope with the case schroot-listmounts returns
	nothing, so that "" is not unmounted.

2007-05-20  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 1.1.4.  Merge changelog
	entries from schroot-1.0 branch.

	* NEWS: Bump version to 1.1.4.  Merge NEWS entries from
	schroot-1.0 branch.

	* configure.ac: Bump version to 1.1.4.

2007-05-20  Roger Leigh  <rleigh@debian.org>

	* Version 1.1.3.

	* debian/changelog: Finalise for 1.1.3.

2007-05-19  Roger Leigh  <rleigh@debian.org>

	* bin/schroot-base/schroot-base-run.h
	(run): Catch a runtime_error thrown while setting the locale, and
	fall back to the C locale.

	* sbuild/sbuild-basic-keyfile.tcc
	(get_locale_string): Catch a runtime_error thrown while setting
	the locale, and fall back to the C locale.

	* debian/changelog: Close Debian bug #425117.

2007-05-19  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 1.1.3.

	* NEWS: Bump version to 1.1.3.

	* configure.ac: Bump version to 1.1.3.  Checks for Boost libraries
	add an -st suffix to use the single-threaded version of the
	library.

2007-05-10  Roger Leigh  <rleigh@debian.org>

	* Version 1.1.2.

	* debian/changelog: Finalise for 1.1.2.

2007-05-10  Roger Leigh  <rleigh@debian.org>

	* po/POTFILES.in: Remove sbuild/sbuild-keyfile.cc, and add
	sbuild/sbuild-keyfile-base.cc

2007-05-10  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Fix typo.
